
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-03-13 niel
	Fix: Problem with redirection to install on fully installed system (closes PR 2415).
2017-03-11 niel
	Chg: Refactored DB class. This cleans it up and streamlines the constructor as well as adding
		minimum version checking dependant on the vendor of MySQL variant. Relevant options are
		stored in individual fields, instead of storing the whole options array, after a
		successful connection.
		 Thanks to b3s3rk for finding and fixing the issue with Sphinx and to crapz for
		helping debug.
	Fix Redirect from index page to Install when 'install.lock' does not exist.
2017-03-08 niel
	Mrg: dev-refactor-tpg, which removes conditional checking for TPG as it is no longer optional.
2017-03-06 niel
	Mrg: PR 2406, from egyptianbman - Fix `zed update nzedb`.


2017-03-01 niel
	Fix: Alter the logic for checking the Config files location during install step 1.
	Fix: Update Travis configuration for location of config files.
	Chg: Add PHP 7.1 to Travis' versions to test.
2017-02-24 niel
	Chg: Move location of configuration files (config.php, settings.php, etc.) to .../configuration
		***NOTE*** See v0.7.0.0 entry at https://github.com/nZEDb/nZEDb/wiki/Update-Guide for
		additional instructions.
2017-02-21 DariusIII
	Chg: Move search and user menu to headermenu.tpl in Charisma theme
	Chg: Update Charisma theme to use new bootswatch library, remove unneeded css and make it use
	    the bootswatch slate theme (make it darker).
2017-02-21 niel
	Add: Update nZEDbBase.php file to be able to return any of the 'constant' values.
	Mrg: PR 2397, from ThePeeps - Fix for uspsetting.sh (powerline segment).
2017-02-17 niel