@@ -25,8 +25,6 @@ while :
 do
 	sleep 1
 	CURRTIME=`date +%s`
-	tmux kill-session -t NNTPProxy
-	$PHP ${NZEDB_PATH}/nntpproxy.php
 
 	cd ${NZEDB_PATH}
 	if ! $SCREEN -list | grep -q "POSTP"; then
