@@ -3,7 +3,7 @@ section,subsection,name,value,hint,setting
 		alternate_nntp	0	This sets Postproccessing Additional/Nfo to use the alternate NNTP provider as set in config.php.	alternate_nntp
 		amazonsleep	1000	Sleep time in milliseconds to wait in between amazon requests. If you thread post-proc, multiply by the number of threads. ie Postprocessing Threads = 12, Amazon sleep time = 12000<br /><a href="https://affiliate-program.amazon.com/gp/advertising/api/detail/faq.html">https://affiliate-program.amazon.com/gp/advertising/api/detail/faq.html</a>	amazonsleep
 		backfillthreads	1	The number of threads for backfill.	backfillthreads
-		binarythreads	1	The number of threads for update_binaries. If you notice that you are getting a lot of parts into the partrepair table, it is possible that you USP is not keeping up with the requests. Try to reduce the threads to safe scripts, stop using safe scripts or stop using nntpproxy until improves. Ar least until the cause can be determined.	binarythreads
+		binarythreads	1	The number of threads for update_binaries. If you notice that you are getting a lot of parts into the partrepair table, it is possible that you USP is not keeping up with the requests. Try to reduce the threads to safe scripts or stop using safe scripts until improves. Ar least until the cause can be determined.	binarythreads
 		book_reqids	7010	Categories of Books to lookup information for (only work if Lookup Books is set to yes).	book_reqids
 		checkpasswordedrar	0	Whether to attempt to peek into every release, to see if rar files are password protected.	checkpasswordedrar
 		compressedheaders	0	Some servers allow headers to be sent over in a compressed format.  If enabled this will use much less bandwidth, but processing times may increase.<br />If you notice that update binaries or backfill seems to hang, look in htop and see if a group is being processed. If so, first try disabling compressed headers and let run until it processes the group at least once, then you can re-enable compressed headers.	compressedheaders
@@ -42,7 +42,7 @@ section,subsection,name,value,hint,setting
 		maxnfoprocessed	100	The maximum amount of NFO files to process per run. This uses an NNTP connection, 1 per thread. This does not query Amazon.	maxnfoprocessed
 		maxnforetries	5	How many times to retry when a NFO fails to download. If set to 0, we will not retry. The max is 7.	maxnforetries
 		maxnzbsprocessed	1000	The maximum amount of NZB files to create on stage 5 in update_releases.	maxnzbsprocessed
-		maxpartrepair	15000	The maximum amount of articles to attempt to repair at a time. If you notice that you are getting a lot of parts into the partrepair table, it is possible that you USP is not keeping up with the requests. Try to reduce the threads to safe scripts, stop using safe scripts or stop using nntpproxy until improves. At least until the cause can be determined.	maxpartrepair
+		maxpartrepair	15000	The maximum amount of articles to attempt to repair at a time. If you notice that you are getting a lot of parts into the partrepair table, it is possible that you USP is not keeping up with the requests. Try to reduce the threads to safe scripts or stop using safe scripts until improves. At least until the cause can be determined.	maxpartrepair
 		maxpartsprocessed	3	If a part fails to download while post processing, this will retry up to the amount you set, then give up.	maxpartsprocessed
 		maxrageprocessed	75	The maximum amount of TV shows to process with TVRage per run. This does not use an NNTP connection or query Amazon.	maxrageprocessed
 		maxsizetoformrelease	0	The maximum total size in bytes to make a release. If set to 0, then ignored. Only deletes during release creation.	maxsizetoformrelease
@@ -58,7 +58,6 @@ section,subsection,name,value,hint,setting
 		newgroupscanmethod	0	Scan back X (posts/days) for each new group? Use backfill to scan further.	newgroupscanmethod
 		nextppticket	0		nextppticket
 		nfothreads	1	The number of threads for nfo postprocessing. The max is 16, if you set anything higher it will use 16.	nfothreads
-		nntpproxy	0	Using the NNTP Proxy for nZEDb can improve performance of nZEDb dramatically. It uses connection pooling which not only give more control over the number of connections to use but also reduces time for connection setup/teardown. The proxy also takes care of compressed headers for you. To use this featrure you will need to install pynntp (sudo pip install pynntp or sudo easy_install pynntp) and socketpool (sudo pip install socketpool or sudo easy_install socketpool) (ensure python2 is default) and edit the configuration file (nntpproxy.conf and nntpproxy_a.conf) in the update_scripts/python_scripts/lib (copy sample) directory and finally edit your www/config.php file to use the proxy (username and password are ignored by the proxy - make then anything you like - the proxy doesn't use ssl either). Make sure you turn off the use compressed headers option here in site preferences (the proxy uses compressed headers by default and passes on decompressed data).	nntpproxy
 		nntpretries	10	The maximum number of retry attmpts to connect to nntp provider. On error, each retry takes approximately 5 seconds nntp returns reply. (Default 10).	nntpretries
 		nzbpath	/your/path/to/nzbs/	The directory where nzb files will be stored.	nzbpath
 		nzbsplitlevel	4	Levels deep to store the nzb Files.	nzbsplitlevel
